--- a/EmployeePayrollApp/src/main/resources/application.properties
+++ b/EmployeePayrollApp/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/payrolldb
-spring.datasource.username=root
-spring.datasource.password=meban@123
+spring.profiles.active=dev
+
+environment=COMMON
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/payrolldb
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
